# fastApi_AWS_demo

./: README.md  app.py  cdk.json  key.csv  startup.sh
api/: __init__.py  infrastructure.py
api/src/: Dockerfile  pyproject.toml  requirements.txt  setup.cfg
api/src/functions/: __init__.py  app.py
api/src/sygno_api/: __init__.py
api/src/sygno_api/api/: __init__.py  schema.py
api/src/sygno_api/events/: __init__.py  event_logger.py
api/src/sygno_api/utils/: __init__.py  cfnutils.py  dbmethods.py
cdk_solution/: cdk_solution_stack.py
database/: __init__.py  infrastructure.py
scripts/: populate_api_db.py
tests/unit/: test_cdk_solution_stack.py
