#!/usr/bin/env python

[metadata]
name = sygno-api
version = attr: sygno_api.__version__
author = Julius Ceasar Aguma
author_email = jaguma@uci.edu
description = Sygno FastAPI demo
url="https://github.com/ceasar88/sygno_demo"

[options]
python_requires = >=3.9, < 3.11
package_dir =
    = .
packages = find:
include_package_data = True
install_requires =
    fastapi
    mangum
    uvicorn

[options.packages.find]
where = .

[options.extras_require]
test =
    build
    pytest
    pytest-datadir
    pytest-lazy-fixture
